database scripts improved;